# LGP

./: CMakeLists.txt  README.md  main.cpp
lgp/: config.hpp  data.cpp  data.hpp  fs.cpp  fs.hpp  header.cpp  header.hpp  read.cpp  read.hpp
